perldelta: Note that utf8_hop_safe is for XS code
I actually don't think this should be here.  I think it should be in
Internal Changes.  Note that there were a bunch more functions added
for XS code, and these are there.  Perhaps there should be some separate
sections there, with one for enhancements.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -168,7 +168,7 @@ be called with ampersand syntax (C<&CORE::keys(\%hash>) and via reference
 (C<< my $k = \&CORE::keys; $k-E<gt>(\%hash) >>).  Previously they could only be
 used when inlined.
 
-=head2 create a safer utf8_hop() called utf8_hop_safe()
+=head2 for XS code, create a safer utf8_hop() called utf8_hop_safe()
 
 Unlike utf8_hop(), utf8_hop_safe() won't navigate before the beginning or after
 the end of the supplied buffer.
