--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -17,8 +17,12 @@ This release includes three updates with widespread effects:
 
 =item * C<.> no longer in C<@INC>
 
-The current modules, and for the execution of scripts.  See the section
-L<< Removal of the current directory (C<.>) from C<@INC> >> for the full details.
+For security reasons, the current directory (C<.>) is no longer included
+by default at the end of the module search path (C<@INC>). This may have
+widespread implications for the building, testing and installing of
+modules, and for the execution of scripts.  See the section
+L<< Removal of the current directory (C<.>) from C<@INC> >>
+for the full details.
 
 =item * C<do> may now warn
 
